Gesamtheit der Sonarqube Issues gefixt