@@ -9,6 +9,9 @@ import java.util.logging.Logger;
 
 public class CSelectDialogFrame extends JFrame implements CInfoParent, CListParent {
 
+    private static final String BEDITCONST = "bedit";
+    private static final String BDELETECONST = "bdelete";
+    private static final String OBJECTNAME = "objectname";
     private static final Logger LOGGER = Logger.getLogger(CSelectDialogFrame.class.getName());
     private final JPanel p1 = new JPanel();
     private final JPanel p2 = new JPanel();
@@ -19,31 +22,30 @@ public class CSelectDialogFrame extends JFrame implements CInfoParent, CListPare
     CButton bCancel;
     CButton bSelect;
     Component o;
-    CSelectParent t;
-    CProperties p_ldo;
+    transient CSelectParent t;
+    CProperties pLdo;
     private CButton bNew;
     private CButton bEdit;
     private CButton bDelete;
-    private CListDataObject ldo;
+    private transient CListDataObject ldo;
     private CAddonTableBean searchBean = null;
 
     public CSelectDialogFrame(Component o, CSelectParent t, CProperties p) {
-//		super((Frame)o,true);
         this.o = o;
         this.t = t;
         this.p = p;
         setIconImage(Toolkit.getDefaultToolkit().createImage("../images/logo.gif"));
-//		setLocationRelativeTo(t);
         setDefaultCloseOperation(WindowConstants.DISPOSE_ON_CLOSE);
         CTableModel tabModel = new CTableModel();
         tabModel.addColumn(p.get("label"));
         tabModel.addRows(CDataManager.getInstance().getSelect(p));
         tab.setModel(tabModel);
-        tab.setAutoResizeMode(CTable.AUTO_RESIZE_ALL_COLUMNS);
-        int height = Math.min(Math.max((tab.getRowCount() + 1) * 20, 100), 600);
+        tab.setAutoResizeMode(JTable.AUTO_RESIZE_ALL_COLUMNS);
+        int height = Math.clamp((tab.getRowCount() + 1) * 20L, 100, 600);
         int width = 200;
         sp.setPreferredSize(new Dimension(width, height));
         tab.addMouseListener(new MouseAdapter() {
+            @Override
             public void mouseClicked(MouseEvent e) {
                 int clickCount = e.getClickCount();
                 if (clickCount >= 2) {
@@ -73,26 +75,23 @@ public class CSelectDialogFrame extends JFrame implements CInfoParent, CListPare
     }
 
     public CSelectDialogFrame(Component o, CSelectParent t, CListDataObject ldo) {
-//		super((Frame)o,true);
         this.o = o;
         this.t = t;
         this.ldo = ldo;
         setIconImage(Toolkit.getDefaultToolkit().createImage("../images/logo.gif"));
-//		if (t instanceof Component) {
-//			setLocationRelativeTo((Component)t);
-//		}
-        p_ldo = ldo.getCProperties();
+        pLdo = ldo.getCProperties();
         tab.setCListDataObject(ldo);
-        if (p_ldo.get("order") != null) {
-            tab.setModel(ldo.select(p_ldo));
+        if (pLdo.get("order") != null) {
+            tab.setModel(ldo.select(pLdo));
         } else {
             tab.setModel(ldo.select(1));
         }
-        int height = Math.min(Math.max((tab.getRowCount() + 1) * 20, 100), 600);
+        int height = Math.clamp((tab.getRowCount() + 1) * 20L, 100, 600);
         int width = 200;
         sp.setPreferredSize(new Dimension(width, height));
         tab.setWidth(ldo.getCProperties());
         tab.addMouseListener(new MouseAdapter() {
+            @Override
             public void mouseClicked(MouseEvent e) {
                 int clickCount = e.getClickCount();
                 if (clickCount >= 2) {
@@ -100,7 +99,6 @@ public class CSelectDialogFrame extends JFrame implements CInfoParent, CListPare
                 }
             }
         });
-//		setTitle((String) p.get("label"));
         Container cp = getContentPane();
         cp.setLayout(new BorderLayout());
         cp.add(sp, BorderLayout.CENTER);
@@ -112,32 +110,29 @@ public class CSelectDialogFrame extends JFrame implements CInfoParent, CListPare
         bSelect.addActionListener(e -> bSelect());
         p2.add(bSelect);
         bNew = CButtonFactory.getButton("new");
-        if (p_ldo.get("bnew") == null || p_ldo.get("bnew").toString().equalsIgnoreCase("")) {
+        if (pLdo.get("bnew") == null || pLdo.get("bnew").toString().equalsIgnoreCase("")) {
             bNew.addActionListener(e -> bNew());
         }
-//		p2.add(bNew);
         bEdit = CButtonFactory.getButton("edit");
-        if (p_ldo.get("bedit") == null || p_ldo.get("bedit").toString().equalsIgnoreCase("")) {
+        if (pLdo.get(BEDITCONST) == null || pLdo.get(BEDITCONST).toString().equalsIgnoreCase("")) {
             bEdit.addActionListener(e -> onEdit());
         }
-//		p2.add(bEdit);
         bDelete = CButtonFactory.getButton("delete");
-        if (p_ldo.get("bdelete") == null || p_ldo.get("bdelete").toString().equalsIgnoreCase("")) {
+        if (pLdo.get(BDELETECONST) == null || pLdo.get(BDELETECONST).toString().equalsIgnoreCase("")) {
             bDelete.addActionListener(e -> bDelete());
         }
-//		p2.add(bDelete);
 
         p1.add(p3, BorderLayout.EAST);
         p3.setLayout(new FlowLayout(FlowLayout.RIGHT));
         bCancel = CButtonFactory.getButton("cancel");
         bCancel.addActionListener(e -> bCancel());
-        addButton(bNew, p_ldo.get("bnew"));
-        addButton(bEdit, p_ldo.get("bedit"));
-        addButton(bDelete, p_ldo.get("bdelete"));
+        addButton(bNew, pLdo.get("bnew"));
+        addButton(bEdit, pLdo.get(BEDITCONST));
+        addButton(bDelete, pLdo.get(BDELETECONST));
         p3.add(bCancel);
 
-        if (p_ldo.get("color") != null) {
-            String color = p_ldo.get("color").toString();
+        if (pLdo.get("color") != null) {
+            String color = pLdo.get("color").toString();
             int r = Integer.parseInt(color.substring(0, 3));
             int g = Integer.parseInt(color.substring(3, 6));
             int b = Integer.parseInt(color.substring(6));
@@ -173,27 +168,27 @@ public class CSelectDialogFrame extends JFrame implements CInfoParent, CListPare
     }
 
     private CProperties getSelectedElement() {
-        CProperties p = new CProperties();
-        p.put("objectName", ldo.getCProperties().get("objectName").toString());
-        p.put("keys", tab.getKeys());
-        return p;
+        CProperties selectP = new CProperties();
+        selectP.put(OBJECTNAME, ldo.getCProperties().get(OBJECTNAME).toString());
+        selectP.put("keys", tab.getKeys());
+        return selectP;
     }
 
     protected CProperties getNewElement() {
-        CProperties p = new CProperties();
-        p.put("objectName", ldo.getCProperties().get("objectName").toString());
-        p.put("key", "");
-        return p;
+        CProperties getP = new CProperties();
+        getP.put(OBJECTNAME, ldo.getCProperties().get(OBJECTNAME).toString());
+        getP.put("key", "");
+        return getP;
     }
 
     protected void bSelect() {
-        if (t instanceof CDisplayFieldListBean) {
+        if (t instanceof CDisplayFieldListBean cdisplayfieldlistbean) {
             int[] rows = tab.getSelectedRows();
             Object[] values = new Object[rows.length];
             for (int i = 0; i < rows.length; i++) {
                 values[i] = tab.getValueAt(rows[i], 0);
             }
-            ((CDisplayFieldListBean) t).insert(values);
+            cdisplayfieldlistbean.insert(values);
         } else {
             t.setValue(tab.getValueAt(tab.getSelectedRow(), 0));
         }
@@ -201,18 +196,14 @@ public class CSelectDialogFrame extends JFrame implements CInfoParent, CListPare
     }
 
     public void refresh() {
-        if (p_ldo.get("order") != null) {
-            tab.setModel(ldo.select(p_ldo));
+        if (pLdo.get("order") != null) {
+            tab.setModel(ldo.select(pLdo));
         } else {
             tab.setModel(ldo.select(1));
         }
     }
 
 
-/*	public int getOrderColumn() {
-		// Feste Sortierung, immer nach der ersten Spalte
-		return 1;
-	}*/
 
     private void addButton(CButton button, Object option) {
         if (option == null || option.toString().equalsIgnoreCase("")) {
